Change admin chat prefix to use "[" instead of "{" due to issues with loading properties files.

--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
 Commands.AdminChat.Off=Admin Sgwrs unig [[RED]] Oddi ar
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
-Commands.AdminChat.Prefix=[[AQUA]]\{[[WHITE]]{0}[[AQUA]]\}
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]]
 Commands.AdminToggle=[[RED]] - sgwrs gweinyddol Toggle
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]] Mae\'r gorchymyn yn anabl.
