--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Evne brug sat til [[GREEN]]Sand
 Commands.Ability.On=Evne brug sat til [[GREEN]]Sand
 Commands.AdminChat.Off=Admin Chat kun [[RED]]Slukket
 Commands.AdminChat.On=Kun Admin Chat [[GREEN]]Rigtigt
-Commands.AdminChat.Prefix=[[AQUA]]\\{[[WHITE]]{0}[[AQUA]]\\}
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]]
 Commands.AdminToggle=[[RED]]- Skift admin chatten
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Denne kommando er sl\u00e5et fra.
