--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Habilidades [[RED]]desactivadas
 Commands.Ability.On=Habilidades [[GREEN]]activadas
 Commands.AdminChat.Off=Chat s\u00f3lo para Admins [[RED]]desactivado
 Commands.AdminChat.On=Chat s\u00f3lo para Admins [[GREEN]]activado
-Commands.AdminChat.Prefix=[[AQUA]]\\{[[WHITE]]{0}[[AQUA]]\\}
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]]
 Commands.AdminToggle=[[RED]]- Alternar chat de admin
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Este comando est\u00e1 deshabilitado.
