--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Utilisation des comp\u00e9tences [[RED]]Off
 Commands.Ability.On=Utilisation des comp\u00e9tences [[GREEN]]On
 Commands.AdminChat.Off=Canal admin [[RED]]Off
 Commands.AdminChat.On=Canal admin [[GREEN]]On
-Commands.AdminChat.Prefix=[[AQUA]]\\{[[WHITE]]{0}[[AQUA]]\\}
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]]
 Commands.AdminToggle=[[RED]]- Active / d\u00e9sactive le canal admin
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Cette commande est d\u00e9sactiv\u00e9e.
