--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Uso delle capacit\u00e0 [[RED]]disattivato
 Commands.Ability.On=Uso delle capacit\u00e0 [[GREEN]]attivato
 Commands.AdminChat.Off=Chat solo Amministratori [[RED]]Inattiva
 Commands.AdminChat.On=Chat solo Amministratori [[GREEN]]Attiva
-Commands.AdminChat.Prefix=[[AQUA]]\\{[[WHITE]]{0}[[AQUA]]\\}
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]]
 Commands.AdminToggle=[[RED]]- Attiva o Disattiva la chat amministratori
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Questo comando \u00e8 disabilitato.
