--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Pou\u017eit\u00ed schopnosti bylo [[RED]] vypnuto
 Commands.Ability.On=Pou\u017eit\u00ed schopnosti bylo [[GREEN]]zapnuto
 Commands.AdminChat.Off=Admin chat [[RED]]Vypnuty
 Commands.AdminChat.On=Admin Chat[[GREEN]]Zapnut\u00fd
-Commands.AdminChat.Prefix=[[AQUA]]\\{[[WHITE]]{0}[[AQUA]]\\}
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]]
 Commands.AdminToggle=[[RED]]- Prepnout admin chat
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Tento prikaz je vypnuty.
