--- a/src/main/resources/locale/locale_lv.properties
+++ b/src/main/resources/locale/locale_lv.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
 Commands.AdminChat.Off=Tikai Adminu \u010dats [[RED]]Izsl\u0113gt
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
-Commands.AdminChat.Prefix=[[AQUA]]\\{[[WHITE]]{0}[[AQUA]]\\}
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]]
 Commands.AdminToggle=[[RED]]- Toggle admin chat
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]This command is disabled.
