--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 1.3.13-dev
+ ! Indexed most used mySQL columns for faster queries
  + Added task & command to prune old and powerless users from the SQL database.
  + Added Craftbukkit 1.4.6 / 1.4.7 compatibility
  + Added new /mcrank command for showing a players leader board ranking for all skills in one place
