Fix party/admin chat changing colors.

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Pou\u017eit\u00ed schopnosti bylo [[RED]] vypnuto
 Commands.Ability.On=Pou\u017eit\u00ed schopnosti bylo [[GREEN]]zapnuto
 Commands.AdminChat.Off=Admin chat [[RED]]Vypnuty
 Commands.AdminChat.On=Admin Chat[[GREEN]]Zapnut\u00fd
-Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]]
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]][[WHITE]] 
 Commands.AdminToggle=[[RED]]- Prepnout admin chat
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Tento prikaz je vypnuty.
@@ -381,7 +381,7 @@ Commands.Other=[[GREEN]]--OSTATNI PRIKAZY--
 Commands.Party.Accept=[[RED]]- Potvrdit pozvanku do party
 Commands.Party.Chat.Off=Chat jenom pro partu [[RED]]Vypnuty
 Commands.Party.Chat.On=Party chat [[RED]]Off
-Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
+Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])[[WHITE]] 
 Commands.Party.Commands=[[GREEN]]--P\u0158\u00cdKAZY PARTY--
 Commands.Party.Invite.0=[[RED]]VAROVANI: [[GREEN]]Obdrzel jsi pozvanku do party {0} od {1}
 Commands.Party.Invite.1=[[YELLOW]]Napis [[GREEN]]/accept[[YELLOW]] pro potvrzeni pozvanky
