--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -389,7 +389,7 @@ Commands.Ability.Off=F\u00E4higkeiten [[RED]]deaktiviert
 Commands.Ability.On=F\u00E4higkeiten [[GREEN]]aktivivert
 Commands.AdminChat.Off=Admin Chat only [[RED]]deaktiviert
 Commands.AdminChat.On=Admin Chat only [[GREEN]]aktiviert
-Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]]
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]][[WHITE]] 
 Commands.AdminToggle=[[RED]]- Admin Chat umschalten
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Dieser Command ist deaktiviert.
@@ -424,7 +424,7 @@ Commands.Other=[[GREEN]]--ANDERE COMMANDS--
 Commands.Party.Accept=[[RED]]- Gruppen-Einladung akzeptieren
 Commands.Party.Chat.Off=Gruppen-Chat only [[RED]]deaktiviert
 Commands.Party.Chat.On=Gruppen-Chat only [[GREEN]]aktiviert
-Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
+Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])[[WHITE]] 
 Commands.Party.Commands=[[GREEN]]--GRUPPEN COMMANDS--
 Commands.Party.Invite.0=[[RED]]INFO: [[GREEN]]Du hast eine Gruppen-Einladung f\u00FCr {0} von {1} bekommen
 Commands.Party.Invite.1=[[YELLOW]]Schreibe [[GREEN]]/accept[[YELLOW]] um die Einladung zu genehmingen 
