--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Utilisation des comp\u00e9tences [[RED]]Off
 Commands.Ability.On=Utilisation des comp\u00e9tences [[GREEN]]On
 Commands.AdminChat.Off=Canal admin [[RED]]Off
 Commands.AdminChat.On=Canal admin [[GREEN]]On
-Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]]
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]][[WHITE]] 
 Commands.AdminToggle=[[RED]]- Active / d\u00e9sactive le canal admin
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Cette commande est d\u00e9sactiv\u00e9e.
@@ -381,7 +381,7 @@ Commands.Other=[[GREEN]]--AUTRES COMMANDES--
 Commands.Party.Accept=[[RED]]- Accepte l\'invitation
 Commands.Party.Chat.Off=Canal groupe [[RED]]Off
 Commands.Party.Chat.On=Canal groupe [[GREEN]]On
-Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
+Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])[[WHITE]] 
 Commands.Party.Commands=[[GREEN]]--COMMANDES DE GROUPE--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Vous avez re\u00e7u une invitation de {1} pour rejoindre le groupe {0}
 Commands.Party.Invite.1=[[YELLOW]]Faites [[GREEN]]/accept[[YELLOW]] pour accepter l\'invitation
