--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=\u0412\u043e\u0437\u043c\u043e\u0436\u043d\u043e\u0441\u044
 Commands.Ability.On=\u0412\u043e\u0437\u043c\u043e\u0436\u043d\u043e\u0441\u0442\u044c \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u044c \u0443\u043c\u0435\u043d\u0438\u044f [[GREEN]]\u0432\u043a\u043b\u044e\u0447\u0435\u043d\u0430
 Commands.AdminChat.Off=\u0420\u0435\u0436\u0438\u043c \u0447\u0430\u0442\u0430 \u0442\u043e\u043b\u044c\u043a\u043e \u043c\u0435\u0436\u0434\u0443 \u0430\u0434\u043c\u0438\u043d\u0430\u043c\u0438 [[RED]]\u043e\u0442\u043a\u043b\u044e\u0447\u0435\u043d
 Commands.AdminChat.On=\u0420\u0435\u0436\u0438\u043c \u0447\u0430\u0442\u0430 \u0442\u043e\u043b\u044c\u043a\u043e \u043c\u0435\u0436\u0434\u0443 \u0430\u0434\u043c\u0438\u043d\u0430\u043c\u0438 [[RED]]\u0432\u043a\u043b\u044e\u0447\u0435\u043d
-Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]]
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]][[WHITE]] 
 Commands.AdminToggle=[[RED]]- \u0412\u043a\u043b./\u043e\u0442\u043a\u043b. \u0440\u0435\u0436\u0438\u043c \u0447\u0430\u0442\u0430 \u0442\u043e\u043b\u044c\u043a\u043e \u043c\u0435\u0436\u0434\u0443 \u0430\u0434\u043c\u0438\u043d\u0430\u043c\u0438
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]\u042d\u0442\u0430 \u043a\u043e\u043c\u0430\u043d\u0434\u0430 \u043e\u0442\u043a\u043b\u044e\u0447\u0435\u043d\u0430.
@@ -381,7 +381,7 @@ Commands.Other=[[GREEN]]--\u0414\u0420\u0423\u0413\u0418\u0415 \u041a\u041e\u041
 Commands.Party.Accept=[[RED]]- \u041f\u0440\u0438\u043d\u044f\u0442\u044c \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0435 \u0432 \u0433\u0440\u0443\u043f\u043f\u0443
 Commands.Party.Chat.Off=\u0413\u0440\u0443\u043f\u043f\u043e\u0432\u043e\u0439 \u0427\u0430\u0442 [[RED]]\u043e\u0442\u043a\u043b\u044e\u0447\u0435\u043d
 Commands.Party.Chat.On=\u0413\u0440\u0443\u043f\u043f\u043e\u0432\u043e\u0439 \u0427\u0430\u0442 [[RED]]\u0432\u043a\u043b\u044e\u0447\u0435\u043d
-Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
+Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])[[WHITE]] 
 Commands.Party.Commands=[[GREEN]]--\u0413\u0420\u0423\u041f\u041f\u041e\u0412\u042b\u0415 \u041a\u041e\u041c\u0410\u041d\u0414\u042b--
 Commands.Party.Invite.0=[[RED]]\u0412\u041d\u0418\u041c\u0410\u041d\u0418\u0415: [[GREEN]]\u0412\u044b \u043f\u043e\u043b\u0443\u0447\u0438\u043b\u0438 \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0435 \u0432 \u0433\u0440\u0443\u043f\u043f\u0443 {0} \u043e\u0442 {1}
 Commands.Party.Invite.1=[[YELLOW]]\u041d\u0430\u043f\u0438\u0448\u0438\u0442\u0435 [[GREEN]]/accept[[YELLOW]] \u0447\u0442\u043e\u0431\u044b \u043f\u0440\u0438\u043d\u044f\u0442\u044c \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0435
