Because I don't know how to format our chat properly.

--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Evne brug sat til [[GREEN]]Sand
 Commands.Ability.On=Evne brug sat til [[GREEN]]Sand
 Commands.AdminChat.Off=Admin Chat kun [[RED]]Slukket
 Commands.AdminChat.On=Kun Admin Chat [[GREEN]]Rigtigt
-Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]][[WHITE]] 
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]] 
 Commands.AdminToggle=[[RED]]- Skift admin chatten
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Denne kommando er sl\u00e5et fra.
@@ -381,7 +381,7 @@ Commands.Other=[[GREEN]]--OTHER COMMANDS--
 Commands.Party.Accept=[[RED]]- Accepter gruppe invitation
 Commands.Party.Chat.Off=Gruppe Chat kun [[RED]]Slukket
 Commands.Party.Chat.On=Kun Gruppe Chat [[GREEN]]Rigtigt
-Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])[[WHITE]] 
+Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]]) 
 Commands.Party.Commands=[[GREEN]]--GRUPPE KOMMANDOER--
 Commands.Party.Invite.0=[[RED]]INFORMATION: [[GREEN]]Du har modtaget en gruppe invitation for {0} from {1}
 Commands.Party.Invite.1=[[YELLOW]]Skrive [[GREEN]]/accept[[YELLOW]] for at acceptere invitation
