--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Habilidades [[RED]]desactivadas
 Commands.Ability.On=Habilidades [[GREEN]]activadas
 Commands.AdminChat.Off=Chat s\u00f3lo para Admins [[RED]]desactivado
 Commands.AdminChat.On=Chat s\u00f3lo para Admins [[GREEN]]activado
-Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]][[WHITE]] 
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]] 
 Commands.AdminToggle=[[RED]]- Alternar chat de admin
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Este comando est\u00e1 deshabilitado.
@@ -381,7 +381,7 @@ Commands.Other=[[GREEN]]--OTROS COMANDOS--
 Commands.Party.Accept=[[RED]]- Aceptar invitaci\u00f3n al grupo
 Commands.Party.Chat.Off=S\u00f3lo chat de grupo [[RED]]desactivado
 Commands.Party.Chat.On=S\u00f3lo chat de grupo [[RED]]activado
-Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])[[WHITE]] 
+Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]]) 
 Commands.Party.Commands=[[GREEN]]--COMANDOS DEL GRUPO--
 Commands.Party.Invite.0=[[RED]]ATENCI\u00d3N: [[GREEN]]Fuiste invitado al grupo {0} por {1}
 Commands.Party.Invite.1=[[YELLOW]]Ingresa [[GREEN]]/accept[[YELLOW]] para aceptar la invitaci\u00f3n
