--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
 Commands.AdminChat.Off=Alleen Admin tekst [[RED]]Uit
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
-Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]][[WHITE]] 
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]] 
 Commands.AdminToggle=[[RED]]- Toggle admin chat
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]This command is disabled.
@@ -381,7 +381,7 @@ Commands.Other=[[GREEN]]--OTHER COMMANDS--
 Commands.Party.Accept=[[RED]]- Accept party invite
 Commands.Party.Chat.Off=Party Chat only [[RED]]Off
 Commands.Party.Chat.On=Party Chat only [[GREEN]]On
-Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])[[WHITE]] 
+Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]]) 
 Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party invite for {0} from {1}
 Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/accept[[YELLOW]] to accept the invite
