--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -346,7 +346,7 @@ Commands.Ability.Off=Uso delle capacit\u00e0 [[RED]]disattivato
 Commands.Ability.On=Uso delle capacit\u00e0 [[GREEN]]attivato
 Commands.AdminChat.Off=Chat solo Amministratori [[RED]]Inattiva
 Commands.AdminChat.On=Chat solo Amministratori [[GREEN]]Attiva
-Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]][[WHITE]] 
+Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]] 
 Commands.AdminToggle=[[RED]]- Attiva o Disattiva la chat amministratori
 Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Questo comando \u00e8 disabilitato.
@@ -381,7 +381,7 @@ Commands.Other=[[GREEN]]--ALTRI COMANDI--
 Commands.Party.Accept=[[RED]]- Accetta l\'invito a unirti alla compagnia
 Commands.Party.Chat.Off=Chat di Compagnia [[GREEN]]Inattiva
 Commands.Party.Chat.On=Chat di Compagnia [[GREEN]]Attiva
-Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])[[WHITE]] 
+Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]]) 
 Commands.Party.Commands=[[GREEN]]--COMANDI DI COMPAGNIA--
 Commands.Party.Invite.0=[[RED]]AVVISO: [[GREEN]]Hai ricevuto un invito ad unirti alla compagnia {0} da {1}
 Commands.Party.Invite.1=[[YELLOW]]Digita [[GREEN]]/accept[[YELLOW]] per accettare l\'invito
