--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,10 +19,14 @@ Version 1.3.13-dev
  + Added wooden button to the list of items that shouldn't trigger abilities
  + Added a new feature to fishing. Players will have +10% chance of finding enchanted items when fishing while it's raining
  + Added displaying bonus perks on skill commands
+ + Added config option to disable gaining Acrobatics XP from dodging lightning
  + Added missing skill guides. They're finally here!
+ + Added more localization 
+ + Added a very secret easter egg
  = Fix issue with Sand/Gravel tracking
  = Fix possible NPE when using the PartyAPI to add a player to a party that doesn't exist.
  = Fix mcremove command for mySQL
+ = Fix a java.io.FileNotFoundException when using SQL
  = Impact now works with mobs wearing armor
  = Fixed issue with Tree Feller dropping player-placed blocks
  = Fixed issue with missing default cases from several switch/case statements
@@ -45,7 +49,12 @@ Version 1.3.13-dev
  = Fixed a bug which caused a potentially infinite recursion in a btree structure
  = Fixed a NPE with custom blocks
  = Fixed a bug with Blast Mining never dropping debris blocks
+ = Fixed a bug with Blast Mining incorrectly handling reduced TNT damage
  = Fixed a bug with conflicting fishing enchantments
+ = Fixed a bug where triple drops wouldn't happen
+ = Fixed a bug which caused fishing to ignore max/min levels in treasures.yml
+ = Fixed a bug where treefeller affected player-placed blocks
+ = Fixed bug where Skull Splitter would be applied twice.
  ! GJ stopped being a lazy slacker and got stuff done
  ! Nossr50 actually committed something
  ! Changed code that uses SpoutPlugin to make it compatible with the latest version
@@ -54,12 +63,15 @@ Version 1.3.13-dev
  ! Overall SQL query improvements
  ! Reduced number of SQL queries for mcTop command from 11 to 1, speeding it up immensely
  ! Changed FFS Leaderboards to hold information in memory rather than doing IO work (optimizations)
+ ! Improved chunk conversion (less errors)
+ ! Changed Fishing Treasure Hunter, chance has increased and now actually is level dependent
  - Removed dead code relating to null profiles
  - Removed unused imports
+ - Removed ChunkletUnloader and dependents, since they are no longer necessary.
 
 Version 1.3.12
  + Added Craftbukkit 1.4.5 compatibility
- + Added the new 1.3.2 items, xp and double drops for Cocao beans & Emeralds, EnderChest to the list of blocks that shouldn't trigger abilities
+ + Added the new 1.3.2 items, xp and double drops for Cocoa beans & Emeralds, EnderChest to the list of blocks that shouldn't trigger abilities
  + Added new items from Minecraft 1.4 to Herbalism (potatoes & carrots)
  + Added new configuration file for advanced users.
  + Added new permission nodes to greenthumb for the 1.4 items
