--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,7 +7,9 @@ Key:
   ! Change
   - Removal
 
-Version 1.3.13-dev
+Version 1.3.14-dev
+
+Version 1.3.13
  ! Indexed most used mySQL columns for faster queries
  + Added task & command to prune old and powerless users from the SQL database.
  + Added Craftbukkit 1.4.6 / 1.4.7 compatibility
