Removed extra durability loss from Leaf Blower

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ Key:
 
 Version 1.3.14-dev
  + Added new Hylian Luck skill to Herbalism.
+ - Removed extra durability loss from Leaf Blower
 
 Version 1.3.13
  + Added task & command to prune old and powerless users from the SQL database.
