--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ Version 1.4.00-dev
 
 Version 1.3.14
  + Added new Hylian Luck skill to Herbalism.
+ + Added new cancellable McMMOPlayerDisarmEvent for Citizens compatibility - fires whenever a player is disarmed.
  = Fixed a memory leak involving mob tracking
  - Removed extra durability loss from Leaf Blower
 
