--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,6 +14,7 @@ Version 1.3.14
  + Added new cancellable McMMOPlayerDisarmEvent for Citizens compatibility - fires whenever a player is disarmed.
  = Fixed a memory leak involving mob tracking
  = Fixed ArrayIndexOutOfBoundsException resulting from being unranked in a skill when using FlatFile.
+ ! Changed how Tree Feller is handled, it should now put less stress on the CPU
  - Removed extra durability loss from Leaf Blower
 
 Version 1.3.13
