Fixed an inverted check on Impact.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -39,7 +39,7 @@ Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
 Archery.Effect.0=Skill Shot
 Archery.Effect.1=Increases damage done with bows
 Archery.Effect.2=Daze (Players)
-Archery.Effect.3=Disorients foes and deals 4 DMG
+Archery.Effect.3=Disorients foes and deals {0} DMG
 Archery.Effect.4=Arrow Retrieval
 Archery.Effect.5=Chance to retrieve arrows from corpses
 Archery.Listener=Archery: 
