--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,10 +9,12 @@ Key:
 
 Version 1.4.00-dev
  + Added new cancellable McMMOPlayerDisarmEvent for Citizens compatibility - fires whenever a player is disarmed.
+ + Added config options for Hylian Luck skill
  = Fixed bug where Impact was applied incorrectly due to an inverted method call
  = Fixed bug where Impact improperly determined the defender's armor
  = Fixed ArrayIndexOutOfBoundsException resulting from being unranked in a skill when using FlatFile
-! Changed how Tree Feller is handled, it should now put less stress on the CPU
+ ! Changed how Tree Feller is handled, it should now put less stress on the CPU
+ ! Changed Fisherman's Diet and Farmer's Diet to use two seperate config values
 
 Version 1.3.14
  + Added new Hylian Luck skill to Herbalism.
