Cleanup Swords & Taming commands

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -261,11 +261,11 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]Hit with a counter-attack!
 Swords.Combat.Countered=[[GREEN]]**COUNTER-ATTACKED**
 Swords.Combat.SS.Struck=[[DARK_RED]]Struck by SERRATED STRIKES!
 Swords.Effect.0=Counter Attack
-Swords.Effect.1=Reflect 50% of damage taken
+Swords.Effect.1=Reflect {0} of damage taken
 Swords.Effect.2=Serrated Strikes (ABILITY)
-Swords.Effect.3=25% DMG AoE, Bleed+ AoE
+Swords.Effect.3={0} DMG AoE, Bleed+ AoE
 Swords.Effect.4=Serrated Strikes Bleed+
-Swords.Effect.5=5 Tick Bleed
+Swords.Effect.5={0} Tick Bleed
 Swords.Effect.6=Bleed
 Swords.Effect.7=Apply a bleed DoT
 Swords.Listener=Swords: 
@@ -282,13 +282,13 @@ Swords.SS.Length=[[RED]]Serrated Strikes Length: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Environmentally Aware
 Taming.Ability.Bonus.1=Wolves avoid danger
 Taming.Ability.Bonus.2=Thick Fur
-Taming.Ability.Bonus.3=1/2 Damage, Fire Resistance
+Taming.Ability.Bonus.3=1/{0} Damage, Fire Resistance
 Taming.Ability.Bonus.4=Shock Proof
-Taming.Ability.Bonus.5=Explosives do 1/6 normal damage
+Taming.Ability.Bonus.5=Explosives do 1/{0} normal damage
 Taming.Ability.Bonus.6=Sharpened Claws
-Taming.Ability.Bonus.7=+2 Damage
+Taming.Ability.Bonus.7=+{0} Damage
 Taming.Ability.Bonus.8=Fast Food Service
-Taming.Ability.Bonus.9={0}% Chance for heal on attack
+Taming.Ability.Bonus.9={0} Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
